@@ -1,5 +1,7 @@
 # TODO
 
+- FreeBSD:
+  - MAC: mac_get_file(3), mac(3,4)
 - --stat:
   - move current stat details into a stat/self section.
   - add stat details for stat/root.
