@@ -1,3 +1,8 @@
+2014-01-31  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: show_capabilities_bsd(): Fixes to allow
+	  building on FreeBSD 9.
+
 2014-01-27  James Hunt  <james.hunt@ubuntu.com>
 
 	* configure.ac: Check for FreeBSD Capsicum support.
